--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1757,8 +1757,29 @@ body {
   color: #767676;
 }
 .cid-r6ij1ildQA .mbr-text P {
-  text-align: left;
+  text-align: center;
   color: #000000;
+}
+.cid-r6yIdeGEAc {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-r6yIdeGEAc .image-block {
+  margin: auto;
+}
+.cid-r6yIdeGEAc figcaption {
+  position: relative;
+}
+.cid-r6yIdeGEAc figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-r6yIdeGEAc .image-block {
+    width: 100% !important;
+  }
 }
 .cid-r6y6N0RIM0 {
   padding-top: 30px;
@@ -1819,7 +1840,7 @@ body {
 }
 .cid-r6gDMObQHM {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-r6gDMObQHM .title {
@@ -5739,42 +5760,8 @@ body {
   padding-bottom: 0px;
   background-color: #1ea416;
 }
-.cid-r6i1n6Vkxq {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-}
-@media (min-width: 992px) {
-  .cid-r6i1n6Vkxq .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-r6i1n6Vkxq .mbr-figure {
-    padding-top: 3rem;
-  }
-}
-.cid-r6i1n6Vkxq .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-@media (min-width: 992px) {
-  .cid-r6i1n6Vkxq .media-container-row .mbr-figure {
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-}
-.cid-r6i1n6Vkxq .mbr-text,
-.cid-r6i1n6Vkxq .mbr-section-btn {
-  color: #000000;
-  text-align: left;
-}
-.cid-r6i1n6Vkxq .mbr-section-title {
-  color: #1ea416;
-  text-align: left;
-}
 .cid-r6hUk3tYlu {
-  padding-top: 30px;
+  padding-top: 45px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
@@ -5865,6 +5852,9 @@ body {
 }
 .cid-r6hUk3tYlu .mbr-timeline-text {
   color: #ffffff;
+}
+.cid-r6hUk3tYlu .mbr-timeline-title B {
+  color: #000000;
 }
 .cid-r6hXW2YaeB {
   padding-top: 0px;
