--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5211,7 +5211,7 @@ body {
 }
 .cid-r6yfuSfFbK {
   padding-top: 30px;
-  padding-bottom: 15px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-r6yfuSfFbK .mbr-text,
@@ -5222,29 +5222,8 @@ body {
   text-align: center;
   color: #000000;
 }
-.cid-r6y8VWj6RH {
-  background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 15px;
-}
-.cid-r6y8VWj6RH .image-block {
-  margin: auto;
-}
-.cid-r6y8VWj6RH figcaption {
-  position: relative;
-}
-.cid-r6y8VWj6RH figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-r6y8VWj6RH .image-block {
-    width: 100% !important;
-  }
-}
 .cid-r6y8uYAV0I {
-  padding-top: 15px;
+  padding-top: 0px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
@@ -5255,6 +5234,66 @@ body {
 .cid-r6y8uYAV0I .mbr-text P {
   text-align: center;
   color: #000000;
+}
+.cid-r6yKgHNvqX {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-r6yKgHNvqX .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-r6yKgHNvqX .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-r6yKgHNvqX .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-r6yKgHNvqX .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-r6yKgHNvqX .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #1ea416;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-r6yKgHNvqX .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-r6yKgHNvqX .mbr-gallery-item > div:hover:before {
+  opacity: 0.5 !important;
+}
+.cid-r6yKgHNvqX .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-r6yKgHNvqX .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #1ea416 !important;
+  opacity: 0.5;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
 }
 .cid-r6ya30ykQ5 {
   padding-top: 30px;
