create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5056,54 +5056,53 @@ body {
 .cid-r6hwIouJne .item-name B {
   color: #ffffff;
 }
-.cid-r6hyn0tsoM {
+.cid-r6zaPjp9ln {
   padding-top: 0px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-r6hyn0tsoM .mbr-section-subtitle {
+.cid-r6zaPjp9ln .mbr-section-subtitle {
   color: #767676;
 }
-.cid-r6hyn0tsoM .media-row {
+.cid-r6zaPjp9ln .media-row {
   display: -webkit-flex;
   justify-content: center;
   -webkit-justify-content: center;
 }
-.cid-r6hyn0tsoM .team-item {
+.cid-r6zaPjp9ln .team-item {
   transition: all .2s;
   margin-bottom: 2rem;
 }
-.cid-r6hyn0tsoM .team-item .item-image img {
+.cid-r6zaPjp9ln .team-item .item-image img {
   width: 100%;
 }
-.cid-r6hyn0tsoM .team-item .item-name p {
+.cid-r6zaPjp9ln .team-item .item-name p {
   margin-bottom: 0;
 }
-.cid-r6hyn0tsoM .team-item .item-role p {
+.cid-r6zaPjp9ln .team-item .item-role p {
   margin-bottom: 0;
 }
-.cid-r6hyn0tsoM .team-item .item-social {
+.cid-r6zaPjp9ln .team-item .item-social {
   display: -webkit-flex;
   flex-wrap: wrap;
   justify-content: center;
   -webkit-flex-wrap: wrap;
   -webkit-justify-content: center;
 }
-.cid-r6hyn0tsoM .team-item .item-social .socicon {
+.cid-r6zaPjp9ln .team-item .item-social .socicon {
   color: #232323;
   font-size: 17px;
 }
-.cid-r6hyn0tsoM .team-item .item-caption {
+.cid-r6zaPjp9ln .team-item .item-caption {
   background: #1ea416;
 }
-.cid-r6hyn0tsoM .item-name {
-  color: #000000;
-}
-.cid-r6hyn0tsoM .item-role P {
+.cid-r6zaPjp9ln .item-name {
   color: #ffffff;
-  text-align: center;
 }
-.cid-r6hyn0tsoM .item-name B {
+.cid-r6zaPjp9ln .item-role P {
+  color: #ffffff;
+}
+.cid-r6zaPjp9ln .item-name B {
   color: #ffffff;
 }
 .cid-r6yaNNJVY1 {
