--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5005,7 +5005,7 @@ body {
   color: #ffffff;
 }
 .cid-r6htSAV2zM .item-name B {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-r6hwIouJne {
   padding-top: 0px;
@@ -5054,7 +5054,7 @@ body {
   color: #ffffff;
 }
 .cid-r6hwIouJne .item-name B {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-r6zaPjp9ln {
   padding-top: 0px;
@@ -5103,7 +5103,7 @@ body {
   color: #ffffff;
 }
 .cid-r6zaPjp9ln .item-name B {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-r6yaNNJVY1 {
   padding-top: 30px;
