create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4083,22 +4083,26 @@ body {
 .cid-r6yjPlnRuy .mbr-text B {
   color: #000000;
 }
-.cid-r6yjT0qCCJ {
+.cid-r6zh7K2Pfy {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yjT0qCCJ .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zh7K2Pfy .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yjT0qCCJ .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zh7K2Pfy .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yjT0qCCJ .mbr-text {
+.cid-r6zh7K2Pfy .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zh7K2Pfy .mbr-text B {
   color: #000000;
 }
 .cid-r6yl1MR2Uu {
@@ -4123,22 +4127,26 @@ body {
 .cid-r6yl1MR2Uu .mbr-text B {
   color: #000000;
 }
-.cid-r6yl2o9ACT {
+.cid-r6zhgnbGtg {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yl2o9ACT .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zhgnbGtg .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yl2o9ACT .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zhgnbGtg .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yl2o9ACT .mbr-text {
+.cid-r6zhgnbGtg .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zhgnbGtg .mbr-text B {
   color: #000000;
 }
 .cid-r6yvvQUbnT {
@@ -4163,22 +4171,26 @@ body {
 .cid-r6yvvQUbnT .mbr-text B {
   color: #000000;
 }
-.cid-r6yvwv6WDL {
+.cid-r6zhnypFzq {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yvwv6WDL .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zhnypFzq .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yvwv6WDL .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zhnypFzq .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yvwv6WDL .mbr-text {
+.cid-r6zhnypFzq .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zhnypFzq .mbr-text B {
   color: #000000;
 }
 .cid-r6ywJCDVkr {
@@ -4203,22 +4215,26 @@ body {
 .cid-r6ywJCDVkr .mbr-text B {
   color: #000000;
 }
-.cid-r6ywK9FazY {
+.cid-r6zhuVO5im {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6ywK9FazY .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zhuVO5im .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6ywK9FazY .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zhuVO5im .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6ywK9FazY .mbr-text {
+.cid-r6zhuVO5im .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zhuVO5im .mbr-text B {
   color: #000000;
 }
 .cid-r6yxvGQgFZ {
@@ -4243,22 +4259,48 @@ body {
 .cid-r6yxvGQgFZ .mbr-text B {
   color: #000000;
 }
-.cid-r6yxw5E37I {
+.cid-r6zhEMXgkg {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yxw5E37I .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zhEMXgkg .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yxw5E37I .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zhEMXgkg .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yxw5E37I .mbr-text {
+.cid-r6zhEMXgkg .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zhEMXgkg .mbr-text B {
+  color: #000000;
+}
+.cid-r6zi9R2T7i {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-r6zi9R2T7i .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-r6zi9R2T7i .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-r6zi9R2T7i .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zi9R2T7i .mbr-text B {
   color: #000000;
 }
 .cid-r6yyYcTmmE {
@@ -4283,22 +4325,26 @@ body {
 .cid-r6yyYcTmmE .mbr-text B {
   color: #000000;
 }
-.cid-r6yyYFN8v1 {
+.cid-r6zhSl2igp {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yyYFN8v1 .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zhSl2igp .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yyYFN8v1 .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zhSl2igp .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yyYFN8v1 .mbr-text {
+.cid-r6zhSl2igp .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zhSl2igp .mbr-text B {
   color: #000000;
 }
 .cid-r6yACdY95M {
@@ -4323,22 +4369,26 @@ body {
 .cid-r6yACdY95M .mbr-text B {
   color: #000000;
 }
-.cid-r6yACIxDRQ {
+.cid-r6zhSVwLeu {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yACIxDRQ .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zhSVwLeu .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yACIxDRQ .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zhSVwLeu .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yACIxDRQ .mbr-text {
+.cid-r6zhSVwLeu .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zhSVwLeu .mbr-text B {
   color: #000000;
 }
 .cid-r6yCezflTA {
@@ -4363,22 +4413,26 @@ body {
 .cid-r6yCezflTA .mbr-text B {
   color: #000000;
 }
-.cid-r6yCeZoLZE {
+.cid-r6zi8K9331 {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yCeZoLZE .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zi8K9331 .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yCeZoLZE .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zi8K9331 .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yCeZoLZE .mbr-text {
+.cid-r6zi8K9331 .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zi8K9331 .mbr-text B {
   color: #000000;
 }
 .cid-r6yCg6lnqU {
@@ -4403,27 +4457,31 @@ body {
 .cid-r6yCg6lnqU .mbr-text B {
   color: #000000;
 }
-.cid-r6yCfrDZwp {
+.cid-r6zi9cLpxB {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yCfrDZwp .mbr-figure {
-    padding-left: 4rem;
+  .cid-r6zi9cLpxB .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yCfrDZwp .mbr-figure {
-    padding-top: 1rem;
+  .cid-r6zi9cLpxB .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-r6yCfrDZwp .mbr-text {
+.cid-r6zi9cLpxB .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6zi9cLpxB .mbr-text B {
   color: #000000;
 }
 .cid-r6yDB1UuVn {
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
@@ -4441,24 +4499,6 @@ body {
   text-align: left;
 }
 .cid-r6yDB1UuVn .mbr-text B {
-  color: #000000;
-}
-.cid-r6yDBv8HYM {
-  padding-top: 15px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-@media (min-width: 992px) {
-  .cid-r6yDBv8HYM .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-r6yDBv8HYM .mbr-figure {
-    padding-top: 1rem;
-  }
-}
-.cid-r6yDBv8HYM .mbr-text {
   color: #000000;
 }
 .cid-r6hRUM3z4E {
