--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -35,10 +35,10 @@ body {
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.44rem;
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
@@ -71,9 +71,9 @@ body {
     line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.72rem;
+    font-size: calc( 0.965rem + (0.9 - 0.965) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (0.965rem + (0.9 - 0.965) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.4rem;
@@ -1848,8 +1848,20 @@ body {
 .cid-r6yc1KUhGy H2 {
   color: #ffffff;
 }
+.cid-r6zsaNdbfj {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6zsaNdbfj .mbr-text,
+.cid-r6zsaNdbfj blockquote {
+  color: #767676;
+}
+.cid-r6zsaNdbfj .mbr-text B {
+  color: #000000;
+}
 .cid-r6gDMObQHM {
-  padding-top: 30px;
+  padding-top: 0px;
   padding-bottom: 45px;
   background-color: #ffffff;
 }
@@ -5055,7 +5067,7 @@ body {
   color: #ffffff;
 }
 .cid-r6htSAV2zM .item-name B {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-r6hwIouJne {
   padding-top: 0px;
@@ -5104,7 +5116,7 @@ body {
   color: #ffffff;
 }
 .cid-r6hwIouJne .item-name B {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-r6zaPjp9ln {
   padding-top: 0px;
@@ -5273,7 +5285,7 @@ body {
 }
 .cid-r6yKgHNvqX {
   padding-top: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-r6yKgHNvqX .mbr-slider .carousel-control {
@@ -5330,6 +5342,24 @@ body {
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
+}
+.cid-r6ztYzlKyI {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-r6ztYzlKyI .mbr-text,
+.cid-r6ztYzlKyI blockquote {
+  color: #767676;
+}
+.cid-r6ztYzlKyI .mbr-text P {
+  text-align: center;
+  color: #000000;
+}
+.cid-r6ztg11HL1 {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
 }
 .cid-r6ya30ykQ5 {
   padding-top: 30px;
